<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">musica</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Welcome">Welcome</string>
    <string name="wait_for_song">Waiting for broadcaster to choose a song...</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hint">enter search here</string>
    <string name="search">search</string>
    <string name="initText">results</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="prev">prev</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="play">Play!</string>
    <string name="empty">" "</string>
    <string name="sender">sender</string>
    <string name="title_activity_slave_play">SlavePlayActivity</string>
    <string name="waitForStart">Waiting to start</string>
    <string name="NumOfStartedConnections">0</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="Speaker">Speaker</string>
    <string name="Broadcaster">Broadcaster</string>
    <string name="title_activity_connect_speaker">ConnectSpeakerActivity</string>
    <string name="title_activity_broadcaster">BroadcasterActivity</string>
    <string name="chooseSong">Choose Song</string>
    <string name="zeroConnections">0</string>
     <string name="Play">Play</string>
     <string name="conNum">Number of connected speakers: 0</string>
     <string name="connecting">Connecting...</string>
     <string name="playing">Playing..</string>
     <string name="loading">Loading</string>
     <string name="wait">Wait</string>
     <string name="stop">Stop</string>
     <string name="choose_mode_hint">"Only one device can be the broadcaster "</string>
     <string name="num_of_speakers_connected">Number of speakers connected</string>

</resources>