<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/input"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/searchButton"
        android:hint="@string/hint"
        android:paddingRight="10dp"
        android:text="@string/empty" >

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </EditText>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/input"
        android:layout_alignBottom="@+id/input"
        android:layout_alignParentRight="true"
        android:text="@string/search" />

    <ListView
        android:id="@+id/youTubeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input"
        android:layout_alignRight="@+id/searchButton"
        android:layout_below="@+id/input"
        android:background="#d7e2ea" >

    </ListView>

</RelativeLayout>